--- a/sql/SQL_Assignment.ipynb
+++ b/sql/SQL_Assignment.ipynb
@@ -17,7 +17,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**SQL ASSIGNMENT**\n"
+        "**SQL ASSIGNMENT**\n",
+        "\n",
+        "**Daniel Maithya**\n"
       ],
       "metadata": {
         "id": "fzZVjwvUBJy0"
